Text of Variable name and Value made bold

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 <div class="ui one column grid">
                     <div class="column">
                         <div class="ui celled two column grid">
-							<div class="column">Variable Name</div>
-							<div class="column" id="rval">Value</div>
+							<div class="column"><b>Variable Name</b></div>
+							<div class="column" id="rval"><b>Value</b></div>
                         </div>
                     </div>
                 </div>
