Adding Firefox/Chrome extension support
Refer #3

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="ui modal" id="helpModal">
         <img class="ui huge image" src="qhelp.jpg">
         <div class="ui fluid negative button" id="helpClose">CLOSE</div>
-        <a href="https://github.com/unsuitable001/BitViz/blob/master/README.md" target="_blank"><div class="ui fluid pink button">FULL HELP</div></a>
+        <a href="https://github.com/unsuitable001/BitViz/blob/master/README.md#legends--keybindings" target="_blank"><div class="ui fluid pink button">FULL HELP</div></a>
         <a href="https://github.com/unsuitable001/BitViz/wiki" target="_blank"><div class="ui fluid black button">WIKI</div></a>
     </div>
     <div class="ui center aligned primary segment">
